--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
-.App{
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 
-.Toastify__toast-container {
-  width: 200px;
+.App{
+  font-family: 'Roboto Condensed', sans-serif;
+  text-align: center;
 }
