--- a/src/components/BinaryToDecimal/style.css
+++ b/src/components/BinaryToDecimal/style.css
@@ -4,7 +4,7 @@
   margin: 10px auto;
   padding: 20px;
   max-width: 400px;
-  height: 140px;
+  height: 150px;
   border: 1px solid black;
   border-radius: 10px;
   display: flex;
@@ -19,7 +19,7 @@
 button{
   font-family: 'Catamaran', sans-serif;
   font-size: 20px;
-  margin-top: 20px;
+  margin: 20px;
   padding: 5px 20px;
 }
 
@@ -36,5 +36,6 @@ input{
   font-family: 'Catamaran', sans-serif;
   font-weight: bold;
   width: 40%;
-  font-size: 2.5em;
+  height: 60px;
+  font-size: 2.3em;
 }
