--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 
+body{
+  background-color: #e6e6e6;
+}
+
 .App{
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
