--- a/src/components/ConvertComponent/style.css
+++ b/src/components/ConvertComponent/style.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@400;700&display=swap');
 
 .input-container{
-  margin: 10px auto;
+  margin: 80px auto 20px auto;
   padding: 20px;
-  max-width: 400px;
+  width: 300px;
   height: 150px;
-  border: 1px solid black;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.295);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  background-color: rgba(133, 186, 216, 0.37);
 }
 
 .input{
@@ -22,6 +23,14 @@ button{
   font-size: 20px;
   margin: 20px;
   padding: 5px 20px;
+  border-radius: 10px 0 10px 0;
+  border: none;
+  cursor: pointer;
+  box-shadow:  0 0 5px rgba(0, 0, 0, 0.089);
+}
+
+button:hover{
+  box-shadow:  0 0 10px rgba(0, 0, 0, 0.24);
 }
 
 label{
