--- a/src/components/ConvertComponent/style.css
+++ b/src/components/ConvertComponent/style.css
@@ -3,7 +3,7 @@
 .input-container{
   margin: 80px auto 20px auto;
   padding: 20px;
-  width: 300px;
+  width: max-content;
   height: 150px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.295);
   border-radius: 10px;
